Sonar: class.newInstance() is deprecated
cf. https://stackoverflow.com/q/46393863/2171120